--- a/src/main/resources/templates/admin/classes/update-class.html
+++ b/src/main/resources/templates/admin/classes/update-class.html
@@ -6,20 +6,20 @@
     <title>Update class</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Blocks</div>
-<div class="container" style="margin-top: 10px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Blocks</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Block title</th>
             <th>Course title</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="block : ${blocks}">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="block : ${blocks}">
             <td th:text="${block.id}"></td>
             <td th:text="${block.blockTitle}"></td>
             <td th:text="${block.courseTitle}"></td>
@@ -27,11 +27,11 @@
         </tbody>
     </table>
 </div>
-<div class="container" style="margin-top: 10px; background-color: white; padding: 50px; border-radius:20px;">
-    <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes</div>
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Classes</h2>
+    <table align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Topic</th>
             <th>Date</th>
@@ -41,7 +41,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="class : ${classes}">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="class : ${classes}">
             <td th:text="${class.id}"></td>
             <td th:text="${class.topic}"></td>
             <td th:text="${class.date}"></td>
@@ -52,49 +52,37 @@
         </tbody>
     </table>
 </div>
-
-
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Update class</div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
+    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update class</h2>
+</div>
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
     <div class="row">
         <form th:action="@{/main-page/classes/update}" th:object="${classToUpdate}" method="post">
             <div class="mb-3">
-                <label for="class-id" class="form-label">Class id</label>
-                <input type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{id}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-id" class="form-label">Class id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{id}">
             </div>
             <div>
-                <label for="class-new-topic" class="form-label">New class topic</label>
-                <input type="text" class="form-control" id="class-new-topic" th:field="*{topic}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-new-topic" class="form-label">New class topic</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="class-new-topic" th:field="*{topic}">
             </div>
             <div class="mb-3">
-                <label for="class-date" class="form-label">New class date</label>
-                <input type="text" placeholder="YYYY-MM-DD" class="form-control" id="class-date" th:field="*{date}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-date" class="form-label">New class date</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="YYYY-MM-DD" class="form-control" id="class-date" th:field="*{date}">
             </div>
             <div class="mb-3">
-                <label for="class-time" class="form-label">New class time</label>
-                <input type="text" PLACEHOLDER="HH:MM" class="form-control" id="class-time" th:field="*{time}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-time" class="form-label">New class time</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" PLACEHOLDER="HH:MM" class="form-control" id="class-time" th:field="*{time}">
             </div>
             <div class="mb-3">
-                <label for="block-id" class="form-label">New block Id</label>
-                <input type="text" class="form-control" id="block-id" th:field="*{blockId}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="block-id" class="form-label">New block Id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="block-id" th:field="*{blockId}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 40%">Update</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
             </div>
         </form>
     </div>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/classes-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Classes Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
