--- a/src/main/resources/templates/admin/users/add-user.html
+++ b/src/main/resources/templates/admin/users/add-user.html
@@ -6,60 +6,41 @@
     <title>Add new user</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
     <div class="row">
         <form th:action="@{/main-page/users/add}" th:object="${newUser}" method="post">
             <div class="mb-3">
-                <label for="login" class="form-label">Login</label>
-                <input type="text" class="form-control" id="login" th:field="*{login}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="login" class="form-label">Login</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="login" th:field="*{login}">
             </div>
-
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="text" class="form-control" id="password" th:field="*{password}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="password" class="form-label">Password</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="password" th:field="*{password}">
             </div>
-
             <div class="mb-3">
-                <label for="user-type" class="form-label">User role</label>
-                <input type="text" placeholder="ADMIN or STUDENT or TEACHER" class="form-control" id="user-type" th:field="*{userRole}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-type" class="form-label">User role</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="ADMIN or STUDENT or TEACHER" class="form-control" id="user-type" th:field="*{userRole}">
             </div>
-
             <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" th:field="*{name}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="name" class="form-label">Name</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="name" th:field="*{name}">
             </div>
-
             <div class="mb-3">
-                <label for="surname" class="form-label">Surname</label>
-                <input type="text" class="form-control" id="surname" th:field="*{surname}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="surname" class="form-label">Surname</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="surname" th:field="*{surname}">
             </div>
-
             <div class="mb-3">
-                <label for="active-user" class="form-label">Active</label>
-                <input type="text" placeholder="YES or NO" class="form-control" id="active-user" th:field="*{activeUser}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="active-user" class="form-label">Active</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="YES or NO" class="form-control" id="active-user" th:field="*{activeUser}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Add</button>
             </div>
         </form>
     </div>
 </div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/users-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Users Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
