--- a/src/main/resources/templates/admin/users/all-users.html
+++ b/src/main/resources/templates/admin/users/all-users.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>View All Users</title>
+    <title>Users</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-
-
-<body style="background-color: #f6f6f6">
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-            <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt">Users</h2>
+    <table align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
                 <th>Id</th>
                 <th>Login</th>
                 <th>Password</th>
@@ -25,7 +24,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="user : ${users}">
+            <tr th:each="user : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen; border-color: darkgreen">
                 <td th:text="${user.id}"></td>
                 <td th:text="${user.login}"></td>
                 <td th:text="${user.password}"></td>
@@ -37,19 +36,6 @@
         </tbody>
     </table>
 </div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/users-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Users Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
