--- a/src/main/resources/templates/admin/users/all-users.html
+++ b/src/main/resources/templates/admin/users/all-users.html
@@ -5,37 +5,37 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Users</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
-    <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt">Users</h2>
-    <table align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Users</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-                <th>Id</th>
-                <th>Login</th>
-                <th>Password</th>
-                <th>Role</th>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>Active</th>
-            </tr>
+            <th>Id</th>
+            <th>Login</th>
+            <th>Password</th>
+            <th>Role</th>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Active</th>
+        </tr>
         </thead>
         <tbody>
-            <tr th:each="user : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen; border-color: darkgreen">
-                <td th:text="${user.id}"></td>
-                <td th:text="${user.login}"></td>
-                <td th:text="${user.password}"></td>
-                <td th:text="${user.userRole}"></td>
-                <td th:text="${user.name}"></td>
-                <td th:text="${user.surname}"></td>
-                <td th:text="${user.activeUser}"></td>
-            </tr>
+        <tr th:each="user : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen;">
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.login}"></td>
+            <td th:text="${user.password}"></td>
+            <td th:text="${user.userRole}"></td>
+            <td th:text="${user.name}"></td>
+            <td th:text="${user.surname}"></td>
+            <td th:text="${user.activeUser}"></td>
+        </tr>
         </tbody>
     </table>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
