--- a/src/main/resources/templates/admin/users/update-user.html
+++ b/src/main/resources/templates/admin/users/update-user.html
@@ -6,13 +6,13 @@
     <title>Update user</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Users</div>
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Users</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Login</th>
             <th>Password</th>
@@ -23,7 +23,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="user : ${users}">
+        <tr th:each="user : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${user.id}"></td>
             <td th:text="${user.login}"></td>
             <td th:text="${user.password}"></td>
@@ -35,55 +35,45 @@
         </tbody>
     </table>
 </div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Update User</div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
+    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update user</h2>
+</div>
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
     <div class="row">
         <form th:action="@{/main-page/users/update}" th:object="${userToUpdate}" method="post">
             <div class="mb-3">
-                <label for="user-id" class="form-label">User id</label>
-                <input type="text" placeholder="Type id of EXISTING user" class="form-control" id="user-id" th:field="*{id}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-id" class="form-label">User id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING user" class="form-control" id="user-id" th:field="*{id}">
             </div>
             <div>
-                <label for="user-new-login" class="form-label">New user login</label>
-                <input type="text" class="form-control" id="user-new-login" th:field="*{login}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-new-login" class="form-label">New user login</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="user-new-login" th:field="*{login}">
             </div>
             <div>
-                <label for="user-new-password" class="form-label">New user password</label>
-                <input type="text" class="form-control" id="user-new-password" th:field="*{password}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-new-password" class="form-label">New user password</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="user-new-password" th:field="*{password}">
             </div>
             <div>
-                <label for="user-new-type" class="form-label">New user role</label>
-                <input type="text" placeholder="ADMIN or STUDENT or TEACHER" class="form-control" id="user-new-type" th:field="*{userRole}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-new-type" class="form-label">New user role</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="ADMIN or STUDENT or TEACHER" class="form-control" id="user-new-type" th:field="*{userRole}">
             </div>
             <div>
-                <label for="user-new-name" class="form-label">New user name</label>
-                <input type="text" class="form-control" id="user-new-name" th:field="*{name}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-new-name" class="form-label">New user name</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="user-new-name" th:field="*{name}">
             </div>
             <div>
-                <label for="user-new-surname" class="form-label">New user surname</label>
-                <input type="text" class="form-control" id="user-new-surname" th:field="*{surname}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-new-surname" class="form-label">New user surname</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="user-new-surname" th:field="*{surname}">
             </div>
             <div>
-                <label for="user-new-is-active" class="form-label">Active user</label>
-                <input type="text" placeholder="YES or NO" class="form-control" id="user-new-is-active" th:field="*{activeUser}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-new-is-active" class="form-label">Active user</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="YES or NO" class="form-control" id="user-new-is-active" th:field="*{activeUser}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 40%">Update</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-top: 15px; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
             </div>
         </form>
     </div>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/users-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Users Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
