--- a/src/main/resources/templates/admin/registrations/add-registration.html
+++ b/src/main/resources/templates/admin/registrations/add-registration.html
@@ -6,30 +6,30 @@
     <title>Add new registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Courses</div>
-<div class="container" style="background-color: white; padding: 50px; border-radius:20px;">
-    <table class="table table-striped" align="center" style="text-align: center; width:50%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Courses</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Title</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="course : ${courses}">
+        <tr th:each="course : ${courses}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${course.id}"></td>
             <td th:text="${course.title}"></td>
         </tr>
         </tbody>
     </table>
 </div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Users</div>
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Users</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Login</th>
             <th>Password</th>
@@ -40,7 +40,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="user : ${users}">
+        <tr th:each="user : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${user.id}"></td>
             <td th:text="${user.login}"></td>
             <td th:text="${user.password}"></td>
@@ -52,40 +52,24 @@
         </tbody>
     </table>
 </div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Add new registration to the chosen course and user</div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Add new registration to the chosen course and user</h2>
     <div class="row">
         <form th:action="@{/main-page/registrations/add}" th:object="${newRegistration}" method="post">
             <div class="mb-3">
-                <label for="user-id" class="form-label">User Id</label>
-                <input type="text" placeholder="Type id of EXISTING user" class="form-control" id="user-id" th:field="*{userId}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-id" class="form-label">User Id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING user" class="form-control" id="user-id" th:field="*{userId}">
             </div>
             <div class="mb-3">
-                <label for="course-id" class="form-label">Course Id</label>
-                <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{courseId}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="course-id" class="form-label">Course Id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{courseId}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 40%">Add</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Add</button>
             </div>
         </form>
     </div>
 </div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/registrations-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Registrations Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
-</div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
